# rust-engine

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
data/: sample.csv  test_tp_sl.csv
docs/: engine_documentation.md
examples/: colab_quickstart.py  example.py  setup_colab.sh
python/: backtest.py
python/rust_backtest/: __init__.py  backtest.py  builder.py
src/: engine.rs  main.rs  stats.rs  types.rs
